little bug( missing background image on mobile)

--- a/dev/styles.sass
+++ b/dev/styles.sass
@@ -98,7 +98,7 @@ label::selection,label>*::selection
     height: 10rem
     order: -1
     z-index:-1
-    background: url('../multi-step-form-main/assets/images/bg-sidebar-mobile.svg') no-repeat 
+    background: url('/multi-step-form-main/assets/images/bg-sidebar-mobile.svg') no-repeat 
     background-size: cover
 
     &__stepside
